@@ -1,7 +1,7 @@
 network_timeout=60
 base_path=/home/yuqing/fastdfs
 
-tracker_server=192.168.209.121:22122
+tracker_server=192.168.209.108:22122
 
 #standard log level as syslog, case insensitive, value list:
 ### emerg for emergency
