@@ -61,7 +61,7 @@ TARGET_PATH=/usr/local/bin
 #WITH_HTTPD=1
 #WITH_LINUX_SERVICE=1
 
-DEBUG_FLAG=1
+#DEBUG_FLAG=1
 
 CFLAGS='-Wall -D_FILE_OFFSET_BITS=64'
 if [ "$DEBUG_FLAG" = "1" ]; then
