@@ -6,6 +6,8 @@ Version 1.25  2010-01-12
  * bug fixed: c client and php client, log not inited cause core dump when 
    call log functions
  * can print stack trace when process core dumped in Linux server
+ * bug fixed: tracker/tracker_mem.c load storage servers fail with many groups
+   and storage servers
 
 Version 1.24  2010-01-06
  * call php_fdfs_close with TSRMLS_CC as php_fdfs_close(i_obj TSRMLS_CC)
